--- a/quarto/reference/syllabification.qmd
+++ b/quarto/reference/syllabification.qmd
@@ -1,8 +1,11 @@
 # Syllabification 
 
 
-
+::: {.callout-caution title="Content TBA"}
 TBA
+:::
+
+## Outlne
 
 - syllabify a word
 - determine vowel length of syllables
