--- a/quarto/reference/index.qmd
+++ b/quarto/reference/index.qmd
@@ -2,70 +2,6 @@
 title: Reference
 ---
 
-Look it up here.
+## API documentation
 
-
-
-`HebrewOrthography` 
-
-:::{.callout-note appearance="minimal"}
-```{julia}
-#| echo: false
-#| warning: false
-using BiblicalHebrew
-@doc HebrewOrthography
-```
-:::
-
-
-
-## Utilities
-
-Even in the twenty-first century, it can be awkward in some environments to display codepoints in the Hebrew range of Unicode.  The package includes a few shortcuts for viewing different representations of codepoints that (although generic) are sometimes  especially useful when working with fully pointed Hebrew text.
-
-
-`BiblicalHebrew.codept`
-
-:::{.callout-note appearance="minimal"}
-```{julia}
-#| echo: false
-#| warning: false
-@doc BiblicalHebrew.codept
-```
-:::
-
-
-
-`BiblicalHebrew.hex`
-
-:::{.callout-note appearance="minimal"}
-```{julia}
-#| echo: false
-#| warning: false
-@doc BiblicalHebrew.hex
-```
-:::
-
-
-`BiblicalHebrew.int`
-
-:::{.callout-note appearance="minimal"}
-```{julia}
-#| echo: false
-#| warning: false
-@doc BiblicalHebrew.int
-```
-:::
-
-
-`BiblicalHebrew.codept_split`
-
-
-:::{.callout-note appearance="minimal"}
-```{julia}
-#| echo: false
-#| warning: false
-@doc BiblicalHebrew.codept_split
-```
-:::
-
+- [Working with vowel points (*niqqud*)](./niqqud.qmd)
