--- a/quarto/reference/constants.qmd
+++ b/quarto/reference/constants.qmd
@@ -7,7 +7,7 @@
 ```{julia}
 #| echo: false
 #| warning: false
-using BiblicalHebrew
+using BiblicalHebrew, Orthography
 @doc BiblicalHebrew.aleph_ch
 ```
 :::
@@ -20,246 +20,495 @@ using BiblicalHebrew
 ```{julia}
 #| echo: false
 #| warning: false
-using BiblicalHebrew
 @doc BiblicalHebrew.ayin_ch
 ```
 :::
 
 
 
-BiblicalHebrew.begadkepat
+`BiblicalHebrew.begadkepat`
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
 
 
 BiblicalHebrew.bet_ch
 
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 
 BiblicalHebrew.consonants
-—
-Constant
-Vector of all consonants as Chars.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.dagesh_ch
-—
-Constant
-Unicode codepoint for dagesh as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.dalet_ch
-—
-Constant
-Unicode codepoint for dalet as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.gershayim_ch
-—
-Constant
-Unicode codepoint for multiple-digit number marker gershayim as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
+
 BiblicalHebrew.gershe_ch
-—
-Constant
-Unicode codepoint for single number marker gershe as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
+
 BiblicalHebrew.gimel_ch
-—
-Constant
-Unicode codepoint for gimel as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
+
 BiblicalHebrew.gutturals
-—
-Constant
-Vector of the guttural consonants as Chars.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.he_ch
-—
-Constant
-Unicode codepoint for he as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.het_ch
-—
-Constant
-Unicode codepoint for het as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.hiriq_ch
-—
-Constant
-Unicode codepoint for hiriq as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.holam_ch
-—
-Constant
-Unicode codepoint for holam as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.kaph_ch
-—
-Constant
-Unicode codepoint for kaph as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.kaph_final_ch
-—
-Constant
-Unicode codepoint for final kaph as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
+
 BiblicalHebrew.lamed_ch
-—
-Constant
-Unicode codepoint for lamed as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.mappiq_ch
-—
-Constant
-Unicode codepoint for mappiq as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
+
 BiblicalHebrew.matres
-—
-Constant
-Vector of the matres lectionis as Chars.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.mem_ch
-—
-Constant
-Unicode codepoint for mem as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.mem_final_ch
-—
-Constant
-Unicode codepoint for final mem as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.metheg_ch
-—
-Constant
-Unicode codepoint for metheg as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.nequddot
-—
-Constant
-Vector of all Unicode combining codepoints for vowel markings as Chars.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.nun_ch
-—
-Constant
-Unicode codepoint for mem as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.nun_final_ch
-—
-Constant
-Unicode codepoint for final nun as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.ole_ch
-—
-Constant
-Unicode codepoint for ole accent as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.patah_ch
-—
-Constant
-Unicode codepoint for patah as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.pe_ch
-—
-Constant
-Unicode codepoint for pe as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.pe_final_ch
-—
-Constant
-Unicode codepoint for final pe as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.qamats_ch
-—
-Constant
-Unicode codepoint for qamats as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.qof_ch
-—
-Constant
-Unicode codepoint for qof as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.qubbuts_ch
-—
-Constant
-Unicode codepoint for qubbuts as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.resh_ch
-—
-Constant
-Unicode codepoint for resh as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.samekh_ch
-—
-Constant
-Unicode codepoint for samekh as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.seghol_ch
-—
-Constant
-Unicode codepoint for seghol as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.sheva_ch
-—
-Constant
-Unicode codepoint for sheva as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.shin
-—
-Constant
-String combining Unicode codepoint for sin/shin with shin dot.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.shin_dot_ch
-—
-Constant
-Unicode codepoint for shin dot as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.sin
-—
-Constant
-String combining Unicode codepoint for sin/shin with sin dot.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.sin_dot_ch
-—
-Constant
-Unicode codepoint for sin dot as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.sin_shin_ch
-—
-Constant
-Unicode codepoint for sin/shin grapheme as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.tav_ch
-—
-Constant
-Unicode codepoint for tav as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.tet_ch
-—
-Constant
-Unicode codepoint for tet as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.tsadi_ch
-—
-Constant
-Unicode codepoint for pe as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.tsadi_final_ch
-—
-Constant
-Unicode codepoint for final tsadi as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.tsere_ch
-—
-Constant
-Unicode codepoint for tsere as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.vav_ch
-—
-Constant
-Unicode codepoint for vav as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.yod_ch
-—
-Constant
-Unicode codepoint for yod as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
+
 BiblicalHebrew.zayin_ch
-—
-Constant
-Unicode codepoint for zayin as a Char.
-source
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.begadkepat
+```
+:::
