--- a/quarto/reference/index.qmd
+++ b/quarto/reference/index.qmd
@@ -2,9 +2,7 @@
 title: Reference
 ---
 
-## API documentation
+API documentation:
 
-- [Working with vowel points (*niqqud*)](./niqqud.qmd)
-- Other functions for working with [Hebrew orthography](./more_ortho.qmd)
-- Syllabification (TBA)
-- Some [generic utilities](./utils.qmd) for working with Unicode codepoints
+- all [constants](./constants.qmd)
+- all [functions](./apis.qmd)
