--- a/quarto/guides/index.qmd
+++ b/quarto/guides/index.qmd
@@ -2,4 +2,12 @@
 title: "Guides"
 ---
 
-Recipe book for working with `Orthography.jl`
+Recipes for specific tasks with `Orthography.jl`
+
+
+
+
+- [Working with vowel points (*niqqud*)](./niqqud.qmd)
+- Other aspects of [Hebrew orthography](./more_ortho.qmd) with combining characters
+- Syllabification (TBA)
+- Some [generic utilities](./utils.qmd) for working with Unicode codepoints
