--- a/quarto/guides/utils.qmd
+++ b/quarto/guides/utils.qmd
@@ -1,11 +1,17 @@
 # Utilities
 
 ```{julia}
-using BiblicalHebrew
+using BiblicalHebrew, Unicode
+desert = "מִדְבָּר"
 ```
 
 Even in the twenty-first century, it can be awkward in some environments to display codepoints in the Hebrew range of Unicode.  The package includes a few shortcuts for viewing different representations of codepoints that (although generic) are sometimes  especially useful when working with fully pointed Hebrew text.
 
+
+
+
+
+## APIs
 
 `BiblicalHebrew.codept`
 
