--- a/quarto/reference/constants.qmd
+++ b/quarto/reference/constants.qmd
@@ -1,5 +1,10 @@
 # Constants
 
+```{julia}
+#| echo: false
+using BiblicalHebrew, Orthography
+```
+
 `BiblicalHebrew.aleph_ch`
 
 
@@ -7,7 +12,6 @@
 ```{julia}
 #| echo: false
 #| warning: false
-using BiblicalHebrew, Orthography
 @doc BiblicalHebrew.aleph_ch
 ```
 :::
@@ -37,389 +41,389 @@ using BiblicalHebrew, Orthography
 :::
 
 
-BiblicalHebrew.bet_ch
+`BiblicalHebrew.bet_ch`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.bet_ch
 ```
 :::
 
 
-BiblicalHebrew.consonants
+`BiblicalHebrew.consonants`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.consonants
 ```
 :::
 
-BiblicalHebrew.dagesh_ch
+`BiblicalHebrew.dagesh_ch`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.dagesh_ch
 ```
 :::
 
-BiblicalHebrew.dalet_ch
+`BiblicalHebrew.dalet_ch`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.dalet_ch
 ```
 :::
 
-BiblicalHebrew.gershayim_ch
+`BiblicalHebrew.gershayim_ch`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
-```
-:::
-
-
-BiblicalHebrew.gershe_ch
-
-:::{.callout-note appearance="minimal"}
-```{julia}
-#| echo: false
-#| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.gershayim_ch
 ```
 :::
 
 
-BiblicalHebrew.gimel_ch
+`BiblicalHebrew.gershe_ch`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.gershe_ch
 ```
 :::
 
 
-BiblicalHebrew.gutturals
+`BiblicalHebrew.gimel_ch`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
-```
-:::
-
-BiblicalHebrew.he_ch
-
-:::{.callout-note appearance="minimal"}
-```{julia}
-#| echo: false
-#| warning: false
-@doc BiblicalHebrew.begadkepat
-```
-:::
-
-BiblicalHebrew.het_ch
-
-:::{.callout-note appearance="minimal"}
-```{julia}
-#| echo: false
-#| warning: false
-@doc BiblicalHebrew.begadkepat
-```
-:::
-
-BiblicalHebrew.hiriq_ch
-
-:::{.callout-note appearance="minimal"}
-```{julia}
-#| echo: false
-#| warning: false
-@doc BiblicalHebrew.begadkepat
-```
-:::
-
-BiblicalHebrew.holam_ch
-
-:::{.callout-note appearance="minimal"}
-```{julia}
-#| echo: false
-#| warning: false
-@doc BiblicalHebrew.begadkepat
-```
-:::
-
-BiblicalHebrew.kaph_ch
-
-:::{.callout-note appearance="minimal"}
-```{julia}
-#| echo: false
-#| warning: false
-@doc BiblicalHebrew.begadkepat
-```
-:::
-
-BiblicalHebrew.kaph_final_ch
-
-:::{.callout-note appearance="minimal"}
-```{julia}
-#| echo: false
-#| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.gimel_ch
 ```
 :::
 
 
-BiblicalHebrew.lamed_ch
+`BiblicalHebrew.gutturals`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.gutturals
 ```
 :::
 
-BiblicalHebrew.mappiq_ch
+`BiblicalHebrew.he_ch`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.he_ch
+```
+:::
+
+`BiblicalHebrew.het_ch`
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.het_ch
+```
+:::
+
+`BiblicalHebrew.hiriq_ch`
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.hiriq_ch
+```
+:::
+
+`BiblicalHebrew.holam_ch`
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.holam_ch
+```
+:::
+
+`BiblicalHebrew.kaph_ch`
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.kaph_ch
+```
+:::
+
+`BiblicalHebrew.kaph_final_ch`
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.kaph_final_ch
 ```
 :::
 
 
-BiblicalHebrew.matres
+`BiblicalHebrew.lamed_ch`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.lamed_ch
 ```
 :::
 
-BiblicalHebrew.mem_ch
+`BiblicalHebrew.mappiq_ch`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.mappiq_ch
 ```
 :::
 
-BiblicalHebrew.mem_final_ch
+
+`BiblicalHebrew.matres`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.matres
 ```
 :::
 
-BiblicalHebrew.metheg_ch
+`BiblicalHebrew.mem_ch`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.mem_ch
 ```
 :::
 
-BiblicalHebrew.nequddot
+`BiblicalHebrew.mem_final_ch`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.mem_final_ch
 ```
 :::
 
-BiblicalHebrew.nun_ch
+`BiblicalHebrew.metheg_ch`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.metheg_ch
 ```
 :::
 
-BiblicalHebrew.nun_final_ch
+`BiblicalHebrew.nequddot`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.nequddot
 ```
 :::
 
-BiblicalHebrew.ole_ch
+`BiblicalHebrew.nun_ch`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.nun_ch
 ```
 :::
 
-BiblicalHebrew.patah_ch
+`BiblicalHebrew.nun_final_ch`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.nun_final_ch
 ```
 :::
 
-BiblicalHebrew.pe_ch
+`BiblicalHebrew.ole_ch`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.ole_ch
 ```
 :::
 
-BiblicalHebrew.pe_final_ch
+`BiblicalHebrew.patah_ch`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.patah_ch
 ```
 :::
 
-BiblicalHebrew.qamats_ch
+`BiblicalHebrew.pe_ch`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.pe_ch
 ```
 :::
 
-BiblicalHebrew.qof_ch
+`BiblicalHebrew.pe_final_ch`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.pe_final_ch
 ```
 :::
 
-BiblicalHebrew.qubbuts_ch
+`BiblicalHebrew.qamats_ch`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.qamats_ch
 ```
 :::
 
-BiblicalHebrew.resh_ch
+`BiblicalHebrew.qof_ch`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.qof_ch
 ```
 :::
 
-BiblicalHebrew.samekh_ch
+`BiblicalHebrew.qubbuts_ch`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.qubbuts_ch
 ```
 :::
 
-BiblicalHebrew.seghol_ch
+`BiblicalHebrew.resh_ch`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.resh_ch
 ```
 :::
 
-BiblicalHebrew.sheva_ch
+`BiblicalHebrew.samekh_ch`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.samekh_ch
 ```
 :::
 
-BiblicalHebrew.shin
+`BiblicalHebrew.seghol_ch`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.seghol_ch
 ```
 :::
 
-BiblicalHebrew.shin_dot_ch
+`BiblicalHebrew.sheva_ch`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.sheva_ch
 ```
 :::
 
-BiblicalHebrew.sin
+`BiblicalHebrew.shin`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.shin
 ```
 :::
 
-BiblicalHebrew.sin_dot_ch
+`BiblicalHebrew.shin_dot_ch`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.shin_dot_ch
+```
+:::
+
+`BiblicalHebrew.sin`
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.sin
+```
+:::
+
+`BiblicalHebrew.sin_dot_ch`
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc BiblicalHebrew.sin_dot_ch
 ```
 :::
 
@@ -429,47 +433,47 @@ BiblicalHebrew.sin_shin_ch
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.sin_shin_ch
 ```
 :::
 
-BiblicalHebrew.tav_ch
+`BiblicalHebrew.tav_ch`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.tav_ch
 ```
 :::
 
-BiblicalHebrew.tet_ch
+`BiblicalHebrew.tet_ch`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.tet_ch
 ```
 :::
 
-BiblicalHebrew.tsadi_ch
+`BiblicalHebrew.tsadi_ch`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.tsadi_ch
 ```
 :::
 
-BiblicalHebrew.tsadi_final_ch
+`BiblicalHebrew.tsadi_final_ch`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.tsadi_final_ch
 ```
 :::
 
@@ -479,36 +483,36 @@ BiblicalHebrew.tsere_ch
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.tsere_ch
 ```
 :::
 
-BiblicalHebrew.vav_ch
+`BiblicalHebrew.vav_ch`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.vav_ch
 ```
 :::
 
-BiblicalHebrew.yod_ch
+`BiblicalHebrew.yod_ch`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.yod_ch
 ```
 :::
 
-BiblicalHebrew.zayin_ch
+`BiblicalHebrew.zayin_ch`
 
 :::{.callout-note appearance="minimal"}
 ```{julia}
 #| echo: false
 #| warning: false
-@doc BiblicalHebrew.begadkepat
+@doc BiblicalHebrew.zayin_ch
 ```
 :::
